Fix: refactor pom.xml to fix PIT Mutation coverage error, closes #880